# threadpool

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vix.json
benchmarks/: CMakeLists.txt  parallel_for_bench.cpp  parallel_map_bench.cpp  queue_contention_bench.cpp  shutdown_bench.cpp  submit_bench.cpp
cmake/: vix-threadpool-config.cmake.in  vix-threadpool-options.cmake
docs/: api-reference.md  best-practices.md  cancellation.md  futures.md  index.md  installation.md  metrics.md  parallel-for.md  parallel-map.md  parallel-reduce.md  periodic-tasks.md  priorities.md  quick-start.md  shutdown.md  task-groups.md  thread-pool.md  timeouts.md
examples/: basic_post.cpp  custom_config.cpp  metrics.cpp  parallel_for.cpp  parallel_for_each.cpp  parallel_map.cpp  parallel_reduce.cpp  periodic_task.cpp  shutdown.cpp  submit_future.cpp  task_cancellation.cpp  task_group.cpp  task_priority.cpp  task_timeout.cpp
include/vix/threadpool/: Barrier.hpp  CancellationSource.hpp  CancellationToken.hpp  Deadline.hpp  Executor.hpp  ExecutorTraits.hpp  Future.hpp  InlineExecutor.hpp  Latch.hpp  Parallel.hpp  ParallelFor.hpp  ParallelForEach.hpp  ParallelMap.hpp  ParallelPipeline.hpp  ParallelReduce.hpp  PeriodicTask.hpp  Promise.hpp  QueuePolicy.hpp  RejectionPolicy.hpp  Scheduler.hpp  SchedulingPolicy.hpp  Scope.hpp  SharedState.hpp  Task.hpp  TaskCmp.hpp  TaskGroup.hpp  TaskGuard.hpp  TaskHandle.hpp  TaskId.hpp  TaskOptions.hpp  TaskPriority.hpp  TaskQueue.hpp  TaskResult.hpp  TaskStatus.hpp  ThreadPool.hpp  ThreadPoolConfig.hpp  ThreadPoolError.hpp  ThreadPoolExecutor.hpp  ThreadPoolMetrics.hpp  ThreadPoolStats.hpp  (+9 more)
include/vix/threadpool/detail/: AtomicCounter.hpp  FunctionTraits.hpp  Invoke.hpp  LockUtils.hpp  MoveOnlyFunction.hpp  ScopeExit.hpp  ThreadName.hpp  WaitStrategy.hpp
src/: Barrier.cpp  CancellationSource.cpp  CancellationToken.cpp  Deadline.cpp  Executor.cpp  InlineExecutor.cpp  Latch.cpp  Parallel.cpp  ParallelFor.cpp  ParallelForEach.cpp  ParallelMap.cpp  ParallelPipeline.cpp  ParallelReduce.cpp  PeriodicTask.cpp  QueuePolicy.cpp  RejectionPolicy.cpp  Scheduler.cpp  SchedulingPolicy.cpp  Scope.cpp  Task.cpp  TaskGroup.cpp  TaskHandle.cpp  TaskQueue.cpp  ThreadPool.cpp  ThreadPoolConfig.cpp  ThreadPoolError.cpp  ThreadPoolExecutor.cpp  ThreadPoolMetrics.cpp  ThreadPoolStats.cpp  Timeout.cpp  Worker.cpp  WorkerThread.cpp
src/detail/: ThreadName.cpp  WaitStrategy.cpp
tests/: CMakeLists.txt  ExecutorTest.cpp  ParallelForEachTest.cpp  ParallelForTest.cpp  ParallelMapTest.cpp  ParallelReduceTest.cpp  PeriodicTaskTest.cpp  ScopeTest.cpp  ShutdownTest.cpp  StressTest.cpp  TaskCancellationTest.cpp  TaskGroupTest.cpp  TaskPriorityTest.cpp  TaskQueueTest.cpp  TaskTimeoutTest.cpp  ThreadPoolConfigTest.cpp  ThreadPoolMetricsTest.cpp  ThreadPoolTest.cpp  WorkerTest.cpp
